--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <main></main>
   <body>
-    <!-- <script src="./js/task-1.js" type="module"></script> -->
+    <script src="./js/task-1.js" type="module"></script>
     <script src="./js/task-2.js" type="module"></script>
   </body>
 </html>
